Update client docs